--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,15 +1,4 @@
-absl-py==2.1.0
-altair==5.4.1
-numpy==1.24.3
-pandas==1.5.3
-matplotlib==3.8.1
-streamlit==1.40.1
-transformers==4.33.3
-torch==2.2.2
-torchvision==0.17.2
-tensorflow==2.16.1
-seaborn==0.12.2
-scikit-learn==1.3.0
-blosc2
-cython>=0.29.21
-
+streamlit
+pandas
+torch
+transformers
