--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,8 @@
-torch==2.0.1
-transformers==4.33.3
-streamlit==1.25.0
-pandas==1.5.3
-gdown==4.7.1
+streamlit==1.40.1
+torch>=2.2.0
+transformers>=4.33.3
+pandas>=2.1.2
+gdown>=5.2.0
+safetensors>=0.3.1
 
 
